--- a/logstash-ingest/data/blogs_csv.conf
+++ b/logstash-ingest/data/blogs_csv.conf
@@ -30,8 +30,14 @@ filter {
 
 output {
   stdout { codec => "rubydebug"}
+  # https://www.elastic.co/guide/en/logstash/current/plugins-outputs-elasticsearch.html
   elasticsearch {
-    hosts => [ "elasticsearch1:9200", "elasticsearch2:9200", "elasticsearch3:9200" ]
+    #  [ "https://elasticsearch1:9200", "https://elasticsearch2:9200", "https://elasticsearch3:9200" ]
+    hosts => '${ES_HOST_SEED}'
+    # ssl => yes
+    cacert => '${ES_SSL_CA}'
+    password => '${ES_AUTH_PASSWORD}'
+    user => '${ES_AUTH_USERNAME}'
     index => "blogs"
   }
 }
