--- a/logstash-ingest/Dockerfile
+++ b/logstash-ingest/Dockerfile
@@ -5,6 +5,7 @@ USER root
 COPY *.sh /
 RUN chmod 755 /*.sh
 
+RUN rm /usr/share/logstash/config/logstash-sample.conf
 USER logstash
 COPY logstash.yml /usr/share/logstash/config/logstash.yml
 
