Fix kibana authentication

--- a/.env
+++ b/.env
@@ -3,14 +3,16 @@ STACK_VERSION=8.0.0
 MEM_LIMIT=1500m
 ES_MEMORY_OPTS=-Xms512m -Xmx512m
 CLUSTER_NAME=es-cluster
+LICENSE=basic
 # Port to expose Elasticsearch HTTP API to the host
 ES1_PORT=9200
 ES2_PORT=9201
 ES3_PORT=9202
+KIBANA_PORT=5601
 ELASTIC_USER=elastic
-ELASTIC_PASSWORD=ABK-Gjyf7qA12SC9U4S+
+ELASTIC_PASSWORD=ABKGjyf7qA12SC9U4S
 KIBANA_USER=kibana_system
-KIBANA_PASSWORD=OtkKPBgIk+WNpfhu*zc
-LICENSE=basic
+KIBANA_PASSWORD=OtkKPBgIkWNpfhuzc
+# The api user is given administrator privileges via the superuser role
 APP_USER=api
-APP_PASSWORD=testtest
+APP_PASSWORD=AAwo63npnR6nVo
