--- a/filebeat-ingest/Dockerfile
+++ b/filebeat-ingest/Dockerfile
@@ -5,6 +5,9 @@ USER root
 COPY *.sh /
 RUN chmod 755 /*.sh
 
+RUN mkdir /var/log/filebeat
+RUN chown filebeat /var/log/filebeat -R
+
 USER filebeat
 
 CMD [ "/run.sh" ]
