Remove default passwords

--- a/.env
+++ b/.env
@@ -10,9 +10,9 @@ ES2_PORT=9201
 ES3_PORT=9202
 KIBANA_PORT=5601
 ELASTIC_USER=elastic
-ELASTIC_PASSWORD=ABKGjyf7qA12SC9U4S
+ELASTIC_PASSWORD=
 KIBANA_USER=kibana_system
-KIBANA_PASSWORD=OtkKPBgIkWNpfhuzc
+KIBANA_PASSWORD=
 # The api user is given administrator privileges via the superuser role
 APP_USER=api
-APP_PASSWORD=AAwo63npnR6nVo
+APP_PASSWORD=
