--- a/compose.yaml
+++ b/compose.yaml
@@ -1,5 +1,3 @@
-version: '3.9'
-
 # https://www.elastic.co/guide/en/elasticsearch/reference/current/docker.html
 services:
 
@@ -181,6 +179,7 @@ services:
       - "xpack.graph.enabled=false"
       - "xpack.watcher.enabled=false"
       - "path.repo=/shared_folder"
+      - "ingest.geoip.downloader.enabled=false"
     healthcheck:
       test:
         [
@@ -240,6 +239,7 @@ services:
       - "xpack.graph.enabled=false"
       - "xpack.watcher.enabled=false"
       - "path.repo=/shared_folder"
+      - "ingest.geoip.downloader.enabled=false"
     healthcheck:
       test:
         [
@@ -265,6 +265,7 @@ services:
       - 'ELASTICSEARCH_HOSTS=["https://elasticsearch1:9200","https://elasticsearch2:9200","https://elasticsearch3:9200"]'
       - "SERVER_NAME=localhost"
       - "SERVER_BASEPATH="
+      - "SERVER_PUBLICBASEURL=http://localhost:5601"
       - "XPACK_ENCRYPTEDSAVEDOBJECTS_ENCRYPTIONKEY=UEs2S28DisjIMEZglnjMUEs2S28DisjIMEZglnjM"
       - "XPACK_REPORTING_ENCRYPTIONKEY=UEs2S28DisjIMEZglnjMUEs2S28DisjIMEZglnjM"
       - "XPACK_SECURITY_ENCRYPTIONKEY=UEs2S28DisjIMEZglnjMUEs2S28DisjIMEZglnjM"
@@ -274,7 +275,7 @@ services:
     ports:
       - "${KIBANA_PORT}:5601"
     healthcheck:
-      test: ["CMD-SHELL", "curl -sf http://localhost:5601 | grep -q 'HTTP/1.1 302 Found'"]
+      test: ["CMD-SHELL", "curl -sf http://localhost:5601"]
       interval: 10s
       timeout: 10s
       retries: 120
@@ -317,7 +318,7 @@ services:
 
   es-reader:
     build: es-reader
-    restart: unless-stopped 
+    restart: unless-stopped
     environment:
       - "ES_HOST_SEED=https://elasticsearch3:9200,https://elasticsearch2:9200,https://elasticsearch1:9200"
       - "ES_SSL_CA=/ssl/ca/ca.crt"
@@ -337,7 +338,10 @@ services:
         condition: service_healthy
 
   logstash-ingest:
-    build: ./logstash-ingest
+    build:
+      context: ./logstash-ingest
+      args:
+        - "STACK_VERSION=${STACK_VERSION}"
     restart: "no"
     environment:
       - 'ES_HOST_SEED=https://elasticsearch2:9200'
@@ -361,7 +365,10 @@ services:
         condition: service_healthy
 
   filebeat-ingest:
-    build: ./filebeat-ingest
+    build:
+      context: ./filebeat-ingest
+      args:
+        - "STACK_VERSION=${STACK_VERSION}"
     restart: "no"
     environment:
       - 'ES_HOST_SEED=https://elasticsearch3:9200,https://elasticsearch2:9200,https://elasticsearch1:9200'
